--- a/apiGestores/appsettings.json
+++ b/apiGestores/appsettings.json
@@ -22,6 +22,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conexion": "data source=LAPTOP-C3VSNUJP\\SQLEXPRESS; initial catalog=LocalStuff; user=Daniel.Osuna; password=DanielOzunaV27; Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=true;"
+    "Conexion": "data source=LAPTOP-C3VSNUJP\\SQLEXPRESS; initial catalog=LocalStuff; user=youUserName; password=youPassword; Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=true;"
   }
 }
